--- a/style.css
+++ b/style.css
@@ -1,193 +1,262 @@
-body {
-  margin: 0;
-  font-family: "Roboto Slab", serif;
-  box-sizing: border-box;
-  background-color: #71845c;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.banner {
-  background-image: url(./img/retrato-de-mulher-com-pano-em-campos\ 1\ \(2\).png);
-  background-size: cover;
-  padding: 280px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+
+body {
+    font-family: "Roboto Slab", serif;
+    background-color: #71845c;
+
 }
 
 .container-grid {
     width: 80vw;
     max-width: 1400px;
     margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
 }
 
+.banner {
+    background-image: url("./img/banner.png");
+    height: 100vh;
+    background-repeat: no-repeat;
+}
+
+.part_inicio {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+
+.menu-buscar {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 20px;
+}
+
+
+
+
 .logo {
-  width: 100px;
-  display: flex;
-  position: absolute;
-  top: 50px;
-  left: 100px;
+    width: 100px;
+    display: flex;
+    top: 50px;
+
 }
 
 header {
-  display: flex;
-  gap: 80px;
+    height: 185px;
+    top: 50px;
+    display: flex;
+    align-items: center;
+    gap: 80px;
+}
 
+.menu {
+
+    top: 50px;
+    align-items: center;
 }
 
 nav a {
- 
-  
-  color: #ffff;
-  background: #4f5d40;
-  padding: 5px 10px;
-  border-radius: 8px;
-  text-decoration: none;
+
+    color: #ffff;
+    background: #4f5d40;
+    padding: 5px 10px;
+    border-radius: 8px;
+    text-decoration: none;
 }
 
 .search {
-  padding: 5px;
-  border-radius: 10px;
-  border: 1px solid #cccc;
+    padding: 5px;
+    border-radius: 10px;
+    border: 1px solid #cccc;
 }
 
-section.sobre {
-  background-color: #71845c;
-  padding: 30px;
+#sobre {
+    background-color: #71845c;
+    padding: 30px;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
-section.sobre h2 span,
-section.quem-somos h2 span {
-  background: #800000;
-  padding: 3px 8px;
-  border-radius: 5px;
+#sobre h2 {
+    text-align: center;
 }
 
-.sobre {
-  color: #ffffff;
+#sobre h2 span,
+.quem-somos h2 span {
+    background: #800000;
+    padding: 3px 8px;
+    border-radius: 9px;
 }
+
 
 .sobre-conteudo {
-  display: flex;
-  gap: 40px;
-  margin-top: 40px;
+    display: flex;
+    gap: 40px;
+    margin-top: 40px;
+    font-size: 28px;
+}
+
+.sobre-conteudo p {
+    text-align: justify;
+    color: #ffffff;
 }
 
 .sobre-conteudo img {
-  border-radius: 40px;
-  width: 300px;
+    border-radius: 40px;
+    width: 300px;
 }
 
 .quem-somos {
-  padding: 40px 20px;
-  background-color: #71845c;
-  display: flex;
-  color: #ffffff;
+    padding: 40px 20px;
+    background-color: #71845c;
+    display: flex;
+    justify-content: center;
+    color: #ffffff;
 }
 
-.icone{
-  color: #ffffff;
+
+
+#quem-somos h2 span {
+    background: #800000;
+    padding: 3px 8px;
+    border-radius: 9px;
+
+}
+
+
+.icone {
+    color: #ffffff;
 }
 
 .icones {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    margin-top: 20px;
 
 }
 
-.icone img {
-  width: 100%;
-  border-radius: 12px;
-  
+.icones img {
+    width: 350px;
+    border-radius: 12px;
+
 }
+
+.qs1 {
+    position: relative;
+}
+
+.qs1 img:hover {
+    background-image: url(./img/qs01.png);
+    position: fixed;
+}
+
 
 .faixa {
-  height: 50px;
-  background-image: url(./img/Rectangle\ 31\ \(1\).png);
-  background-repeat: repeat-x;
+    height: 50px;
+    background-image: url(./img/Rectangle\ 31\ \(1\).png);
+    background-repeat: repeat-x;
+}
+
+/* ------ PARALLAX ------ */
+
+#parallax {
+    height: 250px;
+    background: linear-gradient(rgba(0, 0, 0, 0.26)), url(./img/parallax.svg);
+    margin-bottom: 120px;
+    background-attachment: fixed;
+    background-size: 70%;
 }
 
 
 .produtos {
-  background-color: #800000;
-  padding: 40px 20px;
-  text-align: center;
+    background-color: #800000;
+    padding: 40px 20px;
+    text-align: center;
 }
 
 .produtos-container {
-  overflow-x: auto;
-  gap: 20px;
-  display: flex;
-  align-items: center;
-  text-align: center;
+    overflow-x: auto;
+    gap: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
+    transition: 500ms;
 }
 
 .produto {
-  min-width: 200px;
-  color: #ffff;
+    min-width: 200px;
+    color: #ffff;
 }
 
 .produto img {
-  width: 100%;
-  border-radius: 10px;
-  display: flex;
-  justify-items: center;
+    width: 100%;
+    border-radius: 10px;
+    display: flex;
+    justify-items: center;
 }
 
 .btn-site {
-  background: #4f1c1c;
-  border: none;
-  padding: 10px 20px;
-  margin-top: 20px;
-  border-radius: 25px;
-  color: #ffff;
-  font-weight: bold;
+    background: #4f1c1c;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 20px;
+    border-radius: 25px;
+    color: #ffff;
+    font-weight: bold;
 }
 
 .dots {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .dot {
-  height: 10px;
-  width: 10px;
-  background-color: #f1c40f;
-  border-radius: 50%;
-  display: inline-block;
-  margin: 0 4px;
-  opacity: 0.6;
+    height: 10px;
+    width: 10px;
+    background-color: #f1c40f;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 0 4px;
+    opacity: 0.6;
 }
 
 .dot.active {
-  opacity: 1;
+    opacity: 1;
 }
 
 .cadastro {
-  background: #9d2e0e;
-  padding: 30px;
-  border-radius: 20px;
-  width: 300px;
-  margin: 30px auto;
+    background: #9d2e0e;
+    padding: 30px;
+    border-radius: 20px;
+    width: 300px;
+    margin: 30px auto;
 }
 
 .cadastro input {
-  width: 100%;
-  padding: 8px;
-  margin: 5px 0;
-  border: none;
-  border-radius: 10px;
+    width: 100%;
+    padding: 8px;
+    margin: 5px 0;
+    border: none;
+    border-radius: 10px;
 }
 
 footer {
-  background-color: #8b2b06;
-  color: #ffff;
-  text-align: center;
-  padding: 20px;
-  border: 1px solid #ffffff;
-  margin: 20px;
+    background-color: #8b2b06;
+    color: #ffff;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #ffffff;
+    margin: 20px;
 }
-
